# docs/swagger.json
@@ -1,10 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample Server",
+        "title": "Swagger Example API",
+        "contact": {},
+        "version": "0.0.1"
     },
     "paths": {
-        "/user/register": {
+        "/login": {
             "post": {
                 "produces": [
                     "application/json"
@@ -12,7 +15,52 @@
                 "tags": [
                     "SysUser"
                 ],
-                "summary": "用户注册账号",
+                "summary": "用户登录",
+                "parameters": [
+                    {
+                        "description": "用户名, 密码",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UserLoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回包括用户信息,token,过期时间",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.LoginResponse"
+                                        },
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SysUser"
+                ],
+                "summary": "用户注册",
                 "parameters": [
                     {
                         "description": "用户名, 昵称, 密码, 头像",
@@ -20,7 +68,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.Register"
+                            "$ref": "#/definitions/request.UserRegisterRequest"
                         }
                     }
                 ],
@@ -60,18 +108,31 @@
                 "email": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "nickName": {
                     "type": "string"
                 },
                 "userName": {
                     "type": "string"
+                }
+            }
+        },
+        "request.UserLoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "description": "密码",
+                    "type": "string"
                 },
-                "uuid": {
+                "username": {
+                    "description": "用户名",
                     "type": "string"
                 }
             }
         },
-        "request.Register": {
+        "request.UserRegisterRequest": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -88,6 +149,20 @@
                 }
             }
         },
+        "response.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "expiresAt": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.SysUser"
+                }
+            }
+        },
         "response.Response": {
             "type": "object",
             "properties": {
@@ -99,6 +174,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "x-token",
+            "in": "header"
         }
     }
 }
