# model/response/sys_response.go
@@ -1,0 +1,8 @@
+package response
+
+import "github.com/xbmlz/starter-gin/model"
+
+type LoginResponse struct {
+	User  model.SysUser `json:"user"`
+	Token string        `json:"token"`
+}
